--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@notionhq/client": "^2.2.15",
     "@tailwindcss/forms": "^0.5.9",
     "@types/node": "22.7.4",
+    "@vercel/analytics": "^1.3.1",
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
