--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "@heroicons/react": "^2.1.5",
     "@next/bundle-analyzer": "^14.2.14",
     "@notionhq/client": "^2.2.15",
+    "@radix-ui/react-icons": "^1.3.0",
     "@tailwindcss/forms": "^0.5.9",
     "@types/node": "22.7.5",
     "@vercel/analytics": "^1.3.1",
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.1",
     "highlight.js": "^11.10.0",
+    "lucide-react": "^0.452.0",
     "next": "^14.2.14",
     "postcss": "8.4.47",
     "react": "18.3.1",
@@ -26,7 +29,9 @@
     "react-dom": "18.3.1",
     "react-infinite-scroll-component": "^6.1.0",
     "server-only": "^0.0.1",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss": "3.4.13",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.6.2",
     "zod": "^3.23.8"
   },
