--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@heroicons/react": "^2.1.5",
     "@next/bundle-analyzer": "^14.2.14",
     "@notionhq/client": "^2.2.15",
+    "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tailwindcss/forms": "^0.5.9",
     "@types/node": "22.7.5",
     "@vercel/analytics": "^1.3.1",
