--- a/package.json
+++ b/package.json
@@ -9,22 +9,25 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
-    "@next/bundle-analyzer": "^14.2.14",
+    "@next/bundle-analyzer": "^14.2.15",
     "@notionhq/client": "^2.2.15",
     "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "@tailwindcss/forms": "^0.5.9",
-    "@types/node": "22.7.5",
+    "@types/node": "22.7.7",
     "@vercel/analytics": "^1.3.1",
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.11.1",
+    "cmdk": "1.0.0",
+    "framer-motion": "^11.11.9",
     "highlight.js": "^11.10.0",
-    "lucide-react": "^0.452.0",
-    "next": "^14.2.14",
+    "lucide-react": "^0.453.0",
+    "next": "^14.2.15",
     "postcss": "8.4.47",
     "react": "18.3.1",
     "react-device-detect": "^2.2.3",
@@ -32,7 +35,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "server-only": "^0.0.1",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss": "3.4.13",
+    "tailwindcss": "3.4.14",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.6.3",
     "zod": "^3.23.8"
@@ -44,8 +47,8 @@
     "@types/react-dom": "18.3.1",
     "@vercel/style-guide": "^6.0.0",
     "dotenv": "^16.4.5",
-    "eslint": "^9.12.0",
-    "eslint-config-next": "^14.2.14",
+    "eslint": "^9.13.0",
+    "eslint-config-next": "^14.2.15",
     "eslint-config-prettier": "9.1.0",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "0.6.8"
