--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "highlight.js": "^11.10.0",
     "lucide-react": "^0.453.0",
     "next": "^14.2.15",
+    "next-themes": "^0.3.0",
     "postcss": "8.4.47",
     "react": "18.3.1",
     "react-device-detect": "^2.2.3",
