--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/bundle-analyzer": "^14.2.15",
     "@notionhq/client": "^2.2.15",
     "@radix-ui/react-collapsible": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
