--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev --turbo",
+    "lint": "next lint",
     "prettier": "prettier --write --ignore-unknown .",
     "prettier:check": "prettier --check --ignore-unknown .",
     "start": "next start"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
-    "@next/bundle-analyzer": "^14.2.15",
     "@notionhq/client": "^2.2.15",
     "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -17,45 +17,33 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
-    "@tailwindcss/forms": "^0.5.9",
-    "@types/node": "22.7.7",
     "@vercel/analytics": "^1.3.1",
-    "autoprefixer": "10.4.20",
-    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "cmdk": "1.0.0",
     "framer-motion": "^11.11.9",
     "highlight.js": "^11.10.0",
-    "lucide-react": "^0.453.0",
     "next": "^14.2.15",
     "next-themes": "^0.3.0",
-    "postcss": "8.4.47",
     "react": "18.3.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.3.1",
     "react-infinite-scroll-component": "^6.1.0",
     "server-only": "^0.0.1",
-    "tailwind-merge": "^2.5.4",
-    "tailwindcss": "3.4.14",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.6.3",
-    "zod": "^3.23.8"
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/bcrypt": "^5.0.2",
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.1",
     "@vercel/style-guide": "^6.0.0",
-    "dotenv": "^16.4.5",
     "eslint": "^9.13.0",
     "eslint-config-next": "^14.2.15",
     "eslint-config-prettier": "9.1.0",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "0.6.8"
-  },
-  "engines": {
-    "node": ">=18.17.0"
+    "prettier-plugin-tailwindcss": "0.6.8",
+    "tailwindcss": "^3.4.14",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.6.3"
   }
 }
