--- a/package.json
+++ b/package.json
@@ -18,26 +18,26 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@vercel/analytics": "^1.3.1",
+    "@vercel/functions": "^1.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.11.9",
     "highlight.js": "^11.10.0",
-    "next": "^14.2.15",
+    "next": "15.0.0",
     "next-themes": "^0.3.0",
-    "react": "18.3.1",
+    "react": "19.0.0-rc-65a56d0e-20241020",
     "react-device-detect": "^2.2.3",
-    "react-dom": "18.3.1",
+    "react-dom": "19.0.0-rc-65a56d0e-20241020",
     "react-infinite-scroll-component": "^6.1.0",
     "server-only": "^0.0.1",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/react": "18.3.11",
-    "@types/react-dom": "18.3.1",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "@vercel/style-guide": "^6.0.0",
     "eslint": "^9.13.0",
-    "eslint-config-next": "^15.0.0",
+    "eslint-config-next": "15.0.0",
     "eslint-config-prettier": "9.1.0",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
@@ -45,5 +45,9 @@
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.6.3"
+  },
+  "overrides": {
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
   }
 }
