--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,4 @@
 {
-  "extends": ["eslint:recommended", "next/core-web-vitals", "next/typescript"]
+  "extends": ["eslint:recommended", "next/core-web-vitals", "next/typescript"],
+  "plugins": ["react-compiler"]
 }
