--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "@vercel/style-guide": "^6.0.0",
+    "babel-plugin-react-compiler": "^19.0.0-beta-8a03594-20241020",
     "eslint": "^9.13.0",
     "eslint-config-next": "15.0.0",
     "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-8a03594-20241020",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "0.6.8",
