--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@vercel/analytics": "^1.3.1",
     "@vercel/functions": "^1.4.2",
+    "@vercel/speed-insights": "^1.0.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "highlight.js": "^11.10.0",
