--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "@vercel/style-guide": "^6.0.0",
+    "autoprefixer": "^10.4.20",
     "babel-plugin-react-compiler": "^19.0.0-beta-8a03594-20241020",
     "eslint": "^9.13.0",
     "eslint-config-next": "15.0.2",
