--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
   },
   "trustedDependencies": [
-    "@vercel/speed-insights"
+    "@vercel/speed-insights",
+    "sharp"
   ]
 }
