--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev --turbo",
+    "dev": "next dev --turbopack",
     "lint": "next lint",
     "prettier": "prettier --write --ignore-unknown .",
     "prettier:check": "prettier --check --ignore-unknown .",
@@ -29,7 +29,7 @@
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-radio-group": "^1.2.1",
-    "@radix-ui/react-scroll-area": "^1.2.0",
+    "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slider": "^1.2.1",
@@ -39,28 +39,28 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "@vercel/analytics": "^1.3.1",
     "@vercel/functions": "^1.4.2",
     "@vercel/speed-insights": "^1.0.14",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "1.0.4",
+    "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
-    "embla-carousel-react": "^8.3.1",
+    "embla-carousel-react": "^8.5.1",
     "highlight.js": "^11.10.0",
     "input-otp": "^1.4.1",
-    "lucide-react": "^0.462.0",
-    "next": "15.0.3",
-    "next-themes": "^0.4.3",
-    "react": "19.0.0-rc-65a56d0e-20241020",
+    "lucide-react": "^0.468.0",
+    "next": "15.0.4",
+    "next-themes": "^0.4.4",
+    "react": "19.0.0",
     "react-day-picker": "8.10.1",
     "react-device-detect": "^2.2.3",
-    "react-dom": "19.0.0-rc-65a56d0e-20241020",
-    "react-hook-form": "^7.53.2",
+    "react-dom": "19.0.0",
+    "react-hook-form": "^7.54.0",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-resizable-panels": "^2.1.6",
-    "recharts": "^2.13.3",
+    "react-resizable-panels": "^2.1.7",
+    "recharts": "^2.14.1",
     "server-only": "^0.0.1",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
@@ -69,13 +69,13 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.1",
     "@vercel/style-guide": "^6.0.0",
     "autoprefixer": "^10.4.20",
     "babel-plugin-react-compiler": "^19.0.0-beta-8a03594-20241020",
     "eslint": "^9.13.0",
-    "eslint-config-next": "15.0.3",
+    "eslint-config-next": "15.0.4",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-react-compiler": "^19.0.0-beta-8a03594-20241020",
     "postcss": "^8.4.47",
@@ -84,10 +84,6 @@
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.6.3"
-  },
-  "overrides": {
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
   },
   "trustedDependencies": [
     "@vercel/speed-insights",
