Improve code block styling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "cSpell.words": ["notionhq"]
+  "cSpell.words": ["highlightjs", "notionhq"]
 }
