--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,9 @@
 {
-  "extends": ["eslint:recommended", "next/core-web-vitals", "next/typescript"],
+  "extends": [
+    "eslint:recommended",
+    "next/core-web-vitals",
+    "next/typescript",
+    "prettier"
+  ],
   "plugins": ["react-compiler"]
 }
