--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "embla-carousel-react": "^8.5.1",
     "highlight.js": "^11.10.0",
     "input-otp": "^1.4.1",
+    "katex": "^0.16.18",
     "lucide-react": "^0.469.0",
     "next": "15.1.2",
     "next-themes": "^0.4.4",
