chore: add GitHub token environment variable to release workflow

--- a/.github/workflows/create-release-from-tag.yml
+++ b/.github/workflows/create-release-from-tag.yml
@@ -3,6 +3,9 @@ name: Create Release From Tag
 permissions:
   contents: write
 
+env:
+  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 on:
   workflow_dispatch:
   push:
