--- a/.github/workflows/create-release-from-tag.yml
+++ b/.github/workflows/create-release-from-tag.yml
@@ -24,5 +24,5 @@ jobs:
 
       - name: Create Release
         run: |
-          tag=$(git describe --tags --exact-match)
+          tag=$(git describe --tags $(git rev-list --tags --max-count=1))
           gh release create "$tag" --generate-notes
