--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,39 +1,31 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
-    "version": "2.0.0",
-    "tasks": [
-        {
-            "label": "start dev server",
-            "type": "shell",
-            "command": "docker",
-            "args": [
-                "compose",
-                "up",
-                "--build"
-            ],
-            "options": {
-                "env": {
-                    "BUILD_TYPE": "development"
-                }
-            },
-            "problemMatcher": []
-        },
-        {
-            "label": "start prod server",
-            "type": "shell",
-            "command": "docker",
-            "args": [
-                "compose",
-                "up",
-                "--build"
-            ],
-            "options": {
-                "env": {
-                    "BUILD_TYPE": "production"
-                }
-            },
-            "problemMatcher": []
+  // See https://go.microsoft.com/fwlink/?LinkId=733558
+  // for the documentation about the tasks.json format
+  "version": "2.0.0",
+  "tasks": [
+    {
+      "label": "start dev server",
+      "type": "shell",
+      "command": "docker",
+      "args": ["compose", "up", "--build"],
+      "options": {
+        "env": {
+          "BUILD_TYPE": "development"
         }
-    ]
+      },
+      "problemMatcher": []
+    },
+    {
+      "label": "start prod server",
+      "type": "shell",
+      "command": "docker",
+      "args": ["compose", "up", "--build"],
+      "options": {
+        "env": {
+          "BUILD_TYPE": "production"
+        }
+      },
+      "problemMatcher": []
+    }
+  ]
 }
