chore: exclude .next directory from being mounted in Docker compose

--- a/compose.yaml
+++ b/compose.yaml
@@ -5,6 +5,8 @@ services:
       - type: bind
         source: .
         target: /proj/src
+      # do not mount .next
+      - /proj/src/.next
     ports:
       - '3000:3000'
     develop:
