--- a/.github/workflows/create-prerelease-from-tag.yml
+++ b/.github/workflows/create-prerelease-from-tag.yml
@@ -1,4 +1,4 @@
-name: Create Release From Tag
+name: Create Prerelease From Tag
 
 permissions:
   contents: write
@@ -10,11 +10,11 @@ on:
   workflow_dispatch:
   push:
     tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'
+      - 'v[0-9]+.[0-9]+.[0-9]+*'
 
 jobs:
   create-release:
-    name: Create Release From Tag
+    name: Create Prerelease From Tag
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -25,4 +25,4 @@ jobs:
       - name: Create Release
         run: |
           tag=$(git describe --tags $(git rev-list --tags --max-count=1))
-          gh release create "$tag" --generate-notes --verify-tag
+          gh release create "$tag" --generate-notes --prerelease --verify-tag
