--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.0",
     "@types/dateformat": "^5.0.3",
     "@types/fromnow": "^3.0.3",
@@ -84,7 +85,7 @@
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "0.6.9",
-    "tailwindcss": "^3.4.14",
+    "tailwindcss": "^4.0.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.6.3"
   },
