chore: add cwd to docusaurus builds

--- a/.github/workflows/test-deploy-docs.yml
+++ b/.github/workflows/test-deploy-docs.yml
@@ -19,5 +19,7 @@ jobs:
 
       - name: Install dependencies
         run: bun install --frozen-lockfile
+        working-directory: docs
       - name: Test build website
         run: bun build
+        working-directory: docs
