chore: fix missing argument in command

--- a/.github/workflows/test-deploy-docs.yml
+++ b/.github/workflows/test-deploy-docs.yml
@@ -21,5 +21,5 @@ jobs:
         run: bun install --frozen-lockfile
         working-directory: docs
       - name: Test build website
-        run: bun build
+        run: bun run build
         working-directory: docs
