--- a/www/package.json
+++ b/www/package.json
@@ -53,7 +53,7 @@
     "input-otp": "^1.4.1",
     "katex": "^0.16.18",
     "lucide-react": "^0.482.0",
-    "next": "15.2.2",
+    "next": "^15.3.0-canary.12",
     "next-themes": "^0.4.4",
     "react": "19.0.0",
     "react-day-picker": "8.10.1",
