--- a/www/package.json
+++ b/www/package.json
@@ -9,83 +9,83 @@
     "start": "next start"
   },
   "dependencies": {
-    "@heroicons/react": "^2.1.5",
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.0.1",
-    "@notionhq/client": "^2.2.15",
-    "@radix-ui/react-accordion": "^1.2.1",
-    "@radix-ui/react-alert-dialog": "^1.1.2",
-    "@radix-ui/react-aspect-ratio": "^1.1.0",
-    "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-checkbox": "^1.1.2",
-    "@radix-ui/react-collapsible": "^1.1.1",
-    "@radix-ui/react-context-menu": "^2.2.2",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-hover-card": "^1.1.2",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-menubar": "^1.1.2",
-    "@radix-ui/react-navigation-menu": "^1.2.1",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-progress": "^1.1.0",
-    "@radix-ui/react-radio-group": "^1.2.1",
-    "@radix-ui/react-scroll-area": "^1.2.1",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slider": "^1.2.1",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-switch": "^1.1.1",
-    "@radix-ui/react-tabs": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.2",
-    "@radix-ui/react-toggle": "^1.1.0",
-    "@radix-ui/react-toggle-group": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.4",
-    "@vercel/analytics": "^1.3.1",
-    "@vercel/speed-insights": "^1.0.14",
+    "@notionhq/client": "^2.3.0",
+    "@radix-ui/react-accordion": "^1.2.4",
+    "@radix-ui/react-alert-dialog": "^1.1.7",
+    "@radix-ui/react-aspect-ratio": "^1.1.3",
+    "@radix-ui/react-avatar": "^1.1.4",
+    "@radix-ui/react-checkbox": "^1.1.5",
+    "@radix-ui/react-collapsible": "^1.1.4",
+    "@radix-ui/react-context-menu": "^2.2.7",
+    "@radix-ui/react-dialog": "^1.1.7",
+    "@radix-ui/react-dropdown-menu": "^2.1.7",
+    "@radix-ui/react-hover-card": "^1.1.7",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-menubar": "^1.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.6",
+    "@radix-ui/react-popover": "^1.1.7",
+    "@radix-ui/react-progress": "^1.1.3",
+    "@radix-ui/react-radio-group": "^1.2.4",
+    "@radix-ui/react-scroll-area": "^1.2.4",
+    "@radix-ui/react-select": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.3",
+    "@radix-ui/react-slider": "^1.2.4",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.1.4",
+    "@radix-ui/react-tabs": "^1.1.4",
+    "@radix-ui/react-toast": "^1.2.7",
+    "@radix-ui/react-toggle": "^1.1.3",
+    "@radix-ui/react-toggle-group": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.2.0",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.1.1",
     "date-fns": "^4.1.0",
     "dateformat": "^5.0.3",
-    "embla-carousel-react": "^8.5.1",
+    "embla-carousel-react": "^8.6.0",
     "fromnow": "^3.0.1",
-    "highlight.js": "^11.10.0",
-    "input-otp": "^1.4.1",
-    "katex": "^0.16.18",
+    "highlight.js": "^11.11.1",
+    "input-otp": "^1.4.2",
+    "katex": "^0.16.22",
     "lucide-react": "^0.487.0",
-    "next": "^15.3.0-canary.31",
-    "next-themes": "^0.4.4",
+    "next": "^15.3.0",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-day-picker": "8.10.1",
     "react-dom": "19.1.0",
-    "react-hook-form": "^7.54.2",
+    "react-hook-form": "^7.55.0",
     "react-resizable-panels": "^2.1.7",
-    "recharts": "^2.14.1",
+    "recharts": "^2.15.2",
     "server-only": "^0.0.1",
-    "sonner": "^2.0.1",
-    "tailwind-merge": "^3.0.1",
-    "vaul": "^1.1.1",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.2.0",
+    "vaul": "^1.1.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.0",
-    "@trivago/prettier-plugin-sort-imports": "^5.2.0",
+    "@tailwindcss/postcss": "^4.1.3",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/dateformat": "^5.0.3",
     "@types/fromnow": "^3.0.3",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
     "@vercel/style-guide": "^6.0.0",
-    "babel-plugin-react-compiler": "^19.0.0-beta-8a03594-20241020",
-    "eslint": "^9.13.0",
+    "babel-plugin-react-compiler": "^19.0.0-beta-e993439-20250405",
+    "eslint": "^9.24.0",
     "eslint-config-next": "15.2.4",
     "eslint-config-prettier": "10.1.1",
-    "eslint-plugin-react-compiler": "^19.0.0-beta-8a03594-20241020",
-    "postcss": "^8.4.47",
-    "prettier": "^3.3.3",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-e993439-20250405",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "0.6.11",
-    "tailwindcss": "^4.0.0",
+    "tailwindcss": "^4.1.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.6.3"
+    "typescript": "^5.8.3"
   },
   "trustedDependencies": [
     "@vercel/speed-insights",
