--- a/www/package.json
+++ b/www/package.json
@@ -13,9 +13,13 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.503.0",
+    "next": "15.3.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "next": "15.3.1"
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -29,6 +33,7 @@
     "lint-staged": "^15.5.1",
     "prettier": "3.5.3",
     "tailwindcss": "^4.1.4",
+    "tw-animate-css": "^1.2.8",
     "typescript": "^5.8.3"
   }
 }
