--- a/www/package.json
+++ b/www/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "globby": "^14.1.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "react": "^19.1.0",
