chore: introduce import sorting and tailwind class sorting

--- a/www/.prettierrc
+++ b/www/.prettierrc
@@ -3,6 +3,10 @@
   "tabWidth": 2,
   "semi": true,
   "singleQuote": false,
+  "plugins": [
+    "prettier-plugin-organize-imports",
+    "prettier-plugin-tailwindcss"
+  ],
   "overrides": [
     {
       "files": ".prettierrc",
