chore: fix husky `.git` directory not found error

--- a/www/package.json
+++ b/www/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky"
+    "prepare": "cd .. && husky www/.husky"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
