--- a/www/package.json
+++ b/www/package.json
@@ -19,6 +19,7 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
+    "next-mdx-remote-client": "^2.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.2.0"
