--- a/www/package.json
+++ b/www/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "next-mdx-remote-client": "^2.1.1",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.2.0"
