--- a/www/package.json
+++ b/www/package.json
@@ -17,6 +17,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dateformat": "^5.0.3",
     "globby": "^14.1.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.4",
+    "@types/dateformat": "^5.0.3",
     "@types/node": "^20.17.32",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
