--- a/www/.prettierrc
+++ b/www/.prettierrc
@@ -13,6 +13,12 @@
       "options": {
         "parser": "json"
       }
+    },
+    {
+      "files": ["*.mdx", "*.md"],
+      "options": {
+        "proseWrap": "always"
+      }
     }
   ]
 }
