--- a/www/package.json
+++ b/www/package.json
@@ -25,6 +25,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-syntax-highlighter": "^15.6.1",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "@types/node": "^20.17.32",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9.25.1",
     "eslint-config-next": "15.3.1",
     "husky": "^9.1.7",
