--- a/www/package.json
+++ b/www/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint",
     "prepare": "cd .. && husky www/.husky"
   },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
+  },
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
