--- a/www/package.json
+++ b/www/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "globby": "^14.1.0",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
+    "next-mdx-remote-client": "^2.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0"
