--- a/www/package.json
+++ b/www/package.json
@@ -13,6 +13,8 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dateformat": "^5.0.3",
