--- a/www/package.json
+++ b/www/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
     "next-mdx-remote-client": "^2.1.2",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0"
