--- a/www/package.json
+++ b/www/package.json
@@ -13,6 +13,7 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "@radix-ui/react-separator": "^1.1.6",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
@@ -25,6 +26,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-syntax-highlighter": "^15.6.1",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
