--- a/www/package.json
+++ b/www/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build --turbopack",
     "start": "next start",
     "lint": "next lint",
     "prepare": "cd .. && husky www/.husky"
@@ -13,6 +13,9 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.3.2",
     "@radix-ui/react-separator": "^1.1.6",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
@@ -20,19 +23,22 @@
     "clsx": "^2.1.1",
     "dateformat": "^5.0.3",
     "globby": "^14.1.0",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
-    "next-mdx-remote-client": "^2.1.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-syntax-highlighter": "^15.6.1",
+    "remark-frontmatter": "^5.0.0",
+    "remark-mdx-frontmatter": "^5.1.0",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/dateformat": "^5.0.3",
+    "@types/mdx": "^2.0.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
