--- a/www/package.json
+++ b/www/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^19.0.0",
     "react-syntax-highlighter": "^15.6.1",
     "remark-frontmatter": "^5.0.0",
+    "remark-gfm": "^4.0.1",
     "remark-mdx-frontmatter": "^5.1.0",
     "tailwind-merge": "^3.2.0"
   },
