--- a/www/package.json
+++ b/www/package.json
@@ -30,8 +30,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-syntax-highlighter": "^15.6.1",
+    "remark-directive": "^4.0.0",
     "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "remark-mdx-frontmatter": "^5.1.0",
     "tailwind-merge": "^3.2.0"
   },
